--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,12 +1,5 @@
-<span class="done" layout="row" layout-align="end end">
-  <!-- <button md-fab>
-      <md-icon>check circle</md-icon>
-  </button> -->
-  <app-add-missionType> </app-add-missionType>
-</span>
-
 <md-toolbar class="done2" dir="rtl">
-  <div layout="row" layout-align="end end" style="margin: auto">
-    <span >שבץ נא</span>
+  <div style="margin: auto">
+    <span>שבץ נא</span>
   </div>
 </md-toolbar>
