--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,9 +1,11 @@
-<div class="left" style="height:40%; width:60%; margin-top:1%;">
-    <!-- <div flex="70" class="left" style="height:40%;width:60%;">             -->
-    <app-calendar style="width:100%; margin-left:5%; float:left;height:40%"></app-calendar>
-  </div>
-  
-  <div class="right" style="width:10%;margin-right:2%;">
-    <!-- <div flex="30" class="right" style="width:10%;">             -->
-    <app-sidebar></app-sidebar>
-  </div>
+<div class="sidebar">
+  <app-sidebar></app-sidebar>
+</div>
+
+<div class="calendar">
+  <app-calendar></app-calendar>
+</div>
+
+<span class="done">
+  <app-add-missionType> </app-add-missionType>
+</span>
