--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <md-toolbar class="done2" dir="rtl">
   <div style="margin: auto">
-    <span>שבץ נא</span>
+      <a href="/">שבץ נא</a>
   </div>
 </md-toolbar>
